--- a/clase--10/package.json
+++ b/clase--10/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.3"
   }
 }
